tests/toy/neg/001185_mutation.toylang
program a = { program a : bool; } .
